--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -7,4 +7,4 @@ services:
     startCommand: java -jar target/*.jar
     envVars:
       - key: JAVA_HOME
-        value: /opt/render/project/.render-java
+        value: /opt/render/project/.jdk
