Switch to system Maven to fix JAVA_HOME issue

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,4 +4,4 @@ services:
     env: java
     plan: free
     buildCommand: mvn clean install
-    startCommand: java -jar target/*.jar
+    startCommand: java -jar target/demo-0.0.1-SNAPSHOT.jar
